[package]
name = "backup-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
structopt = "0.3.25"
aws-sdk-s3 = "0.3.0"
aws-config = "0.3.0"
log = "0.4.14"
env_logger = "0.9.0"
shellexpand = "2.1.0"
async-recursion = "0.3.2"
thiserror = "1.0.30"

[build-dependencies]
embed-resource = "1.3.3"