[package]
name = "backup-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
structopt = "0.3.26"
aws-sdk-s3 = "0.24.0"
aws-config = "0.54.1"
log = "0.4.17"
env_logger = "0.10.0"
shellexpand = "3.0.0"
async-recursion = "1.0.0"
thiserror = "1.0.32"

[build-dependencies]
embed-resource = "1.7.3"